--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,6 +11,11 @@
         {
             "src": "/images/icon-192x192.png",
             "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "/images/icon-markable-192x192.png",
+            "sizes": "192x192",
             "type": "image/png",
             "purpose": "any maskable"
         },
