[refactor] 유저 정보 입력에서 부부 정보 입력까지 요청 방식 변경 - HTTP Polling 방식에서 SSE 방식으로 변경

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-oauth/google": "^0.11.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.35.3",
+    "@types/event-source-polyfill": "^1.0.5",
     "@types/googlemaps": "^3.43.3",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
@@ -25,6 +26,7 @@
     "dotenv": "^16.3.1",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "event-source-polyfill": "^1.0.31",
     "firebase": "^10.4.0",
     "framer-motion": "^10.16.4",
     "jotai": "^2.4.3",
