--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jotai": "^2.4.3",
     "kakao.maps.d.ts": "^0.1.39",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.46",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "next-pwa": "^5.6.0",
