--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "18.2.7",
     "@types/react-query": "^1.2.9",
     "@types/redux-logger": "^3.0.9",
+    "@vercel/speed-insights": "^1.1.0",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "dotenv": "^16.3.1",
