--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@react-oauth/google": "^0.11.1",
     "@reduxjs/toolkit": "^1.9.5",
+    "@stomp/stompjs": "^7.0.0",
     "@tanstack/react-query": "^4.35.3",
     "@types/event-source-polyfill": "^1.0.5",
     "@types/googlemaps": "^3.43.3",
@@ -53,6 +54,8 @@
     "react-simple-star-rating": "^5.1.7",
     "react-toastify": "^9.1.3",
     "redux-logger": "^3.0.6",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "swr": "^2.2.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
