--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@storybook/react": "7.4.0",
     "@storybook/testing-library": "0.2.0",
     "@types/next-auth": "^3.15.0",
+    "@types/sockjs-client": "^1.5.4",
     "eslint-plugin-storybook": "^0.6.13",
     "storybook": "7.4.0"
   }
